syntax = "proto3";

package project.protobuf.generated;

option java_multiple_files = true;

message SequenceRequest {
    int64 firstValue = 1;
    int64 lastValue = 2;
}

message SequenceResponse {
    int64 newValue = 1;
}

service GenerateSequenceService {
    rpc GenerateSequence(SequenceRequest) returns (stream SequenceResponse) {}
}
